--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
   <div class="text-center">
 
 <br><br>
-    <p><h1>Welcome to GrappleShark at GitHub</h1></p>
+	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
 	
     <p class="lead">Add image here</p>
-	
+	sdksdjlskdjlsdjsd
     
   </div>
   
