Add twitter feed

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="index.php">Home</a></li>
-        <li><a href="about.php">About</a></li>
+        <li><a href="index.html">Home</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
@@ -42,7 +41,9 @@
 	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
 	
     <p class="lead">Add image here</p>
-	sdksdjlskdjlsdjsd
+	
+	<a class="twitter-timeline" href="https://twitter.com/grappleshark">Tweets by grappleshark</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	
     
   </div>
   
