change font size of twitter feed

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
 	
     <p class="lead">Add image here</p>
-	
-	<a class="twitter-timeline" href="https://twitter.com/grappleshark">Tweets by grappleshark</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-	
+	<font size="10">
+	<a class="twitter-timeline" href="https://twitter.com/grappleshark">GrappleShark tweets</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	</font>
     
   </div>
   
