--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <br><br>
 	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
 	
-    <p class="lead">Add image here</p>
-	<font size="10">
+    <p class="lead"><img src="headshot.jpg"></p>
+	<font size="5">
 	<a class="twitter-timeline" href="https://twitter.com/grappleshark">GrappleShark tweets</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</font>
     
