--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <br><br>
 	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
 	
-    <p class="lead"><img src="headshot.jpg"></p>
+    <p class="lead"><img src="grappleshark.github.io/headshot.jpg"></p>
 	<font size="5">
 	<a class="twitter-timeline" href="https://twitter.com/grappleshark">GrappleShark tweets</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</font>
