--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>GrappleShark at GitHub Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
-
+		
+<link rel="stylesheet" type="text/css" href="style.css">
 
 
   </head>
@@ -41,9 +42,9 @@
 	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
 	
     <p class="lead"><img src="grappleshark.github.io/headshot.jpg"></p>
-	<font size="5">
+	
 	<a class="twitter-timeline" href="https://twitter.com/grappleshark">GrappleShark tweets</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</font>
+
     
   </div>
   
