--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <br><br>
 	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
 	
-    <p class="lead"><img src="grappleshark.github.io/headshot.jpg"></p>
+    <p class="lead">Press any key to exist.</p>
+	<p><img src="grappleshark.github.io/headshot.jpg"></p>
 	
 	<a class="twitter-timeline" href="https://twitter.com/grappleshark">GrappleShark tweets</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
