Change embedded twitter feed

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     <p class="lead">Press any key to exist.</p>
 	<p><img src="grappleshark.github.io/headshot.jpg"></p>
 	
-	<a class="twitter-timeline" href="https://twitter.com/grappleshark">GrappleShark tweets</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+<a class="twitter-timeline" data-width="500" href="https://twitter.com/grappleshark">Tweets by grappleshark</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     
   </div>
   
