--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GrappleShark at GitHub Portal</title>
+    <title>GrappleShark at GitHub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 		
@@ -29,6 +29,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
+		<li><a href="about.html">About</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
