--- a/about.html
+++ b/about.html
@@ -42,7 +42,8 @@
 <br><br>
 	  <p><h1>About</h1></p>
 	
-	<p>Tanja is a Software Development Team Leader 👓 Speaker & Advocate for #WomenInTech & #TechDiversity. Dangerous with code & whiteboard markers. She's partial to pistachio ice cream.</p>
+	<p>Tanja is a Software Development Team Leader 👓 Speaker & Advocate for #WomenInTech & #TechDiversity. Dangerous with code & whiteboard markers.</p> 
+	<p> She's partial to pistachio ice cream.</p>
 	<p>This website is currently used an example for work experience students to refer to when building their own.</p>
 	    
   </div>
