--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
 	
     <p class="lead">Press any key to exist.</p>
-	<p><img src="grappleshark.github.io/lecture.jpg"></p>
+	<p><img width="300" src="grappleshark.github.io/lecture.jpg"></p>
 	
 <a class="twitter-timeline" data-width="500" href="https://twitter.com/grappleshark">Tweets by GrappleShark</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     
