--- a/index.html
+++ b/index.html
@@ -43,9 +43,37 @@
 	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
 	
     <p class="lead">Press any key to exist.</p>
-	<p><img width="300" src="grappleshark.github.io/lecture.jpg"></p>
+	<div class="divTable">
+<div class="divTableBody">
+<div class="divTableRow">
+<div class="divTableCell"><p><img width="300" src="grappleshark.github.io/lecture.jpg"></p></div>
+<div class="divTableCell">Currently reading</div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">Article here</div>
+<div class="divTableCell"><a class="twitter-timeline" data-width="200" href="https://twitter.com/grappleshark">Tweets by GrappleShark</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">&nbsp;</div>
+<div class="divTableCell">&nbsp;</div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">&nbsp;</div>
+<div class="divTableCell">&nbsp;</div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">&nbsp;</div>
+<div class="divTableCell">&nbsp;</div>
+</div>
+<div class="divTableRow">
+<div class="divTableCell">&nbsp;</div>
+<div class="divTableCell">&nbsp;</div>
+</div>
+</div>
+</div>
 	
-<a class="twitter-timeline" data-width="500" href="https://twitter.com/grappleshark">Tweets by GrappleShark</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	
+
     
   </div>
   
