--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="divTableBody">
 <div class="divTableRow">
 <div class="divTableCell"><p><img width="300" src="grappleshark.github.io/lecture.jpg"></p></div>
-<div class="divTableCell">Currently reading</div>
+<div class="divTableCell">Currently reading <a href="https://www.amazon.co.uk/d/Books/Phoenix-Project-DevOps-Helping-Business/0988262509/ref=sr_1_1?ie=UTF8&qid=1491417161&sr=8-1&keywords=phoenix+project"><img src="grappleshark.github.io/book.jpg"></a></div>
 </div>
 <div class="divTableRow">
 <div class="divTableCell">Article here</div>
