Adding social media icons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand">GrappleShark Does Git</a>
+      <a class="navbar-brand">GrappleShark</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
@@ -38,17 +38,23 @@
 <div class="container">
   
   <div class="text-center">
+ 
+	<p><img width="300" src="grappleshark.github.io/lecture.jpg"></p>
+	   <p class="lead">Press any key to exist.</p>
+	   <div class="divTable">
+			<div class="divTableBody">
+				<div class="divTableRow">
+				<div class="divTableCell"><a href="https://github.com/grappleshark" target="_blank"><img width="20" src="grappleshark.github.io/git.png"></a></div>
+				<div class="divTableCell"><a href="https://www.linkedin.com/in/lichtensteiger/" target="_blank"><img width="20" src="grappleshark.github.io/in.png"></a></div>
+				<div class="divTableCell"><a href="https://twitter.com/grappleshark" target="_blank"><img width="20" src="grappleshark.github.io/tweet.png"></a></div>
+				<div class="divTableCell"><a href="https://www.instagram.com/grappleshark" target="_blank"><img width="20" src="grappleshark.github.io/insta.png"></a></div>
+				</div>
+			</div>
+		</div>
 
-<br><br>
-	  <p><h1>Welcome to GrappleShark at GitHub</h1></p>
-	
-    <p class="lead">Press any key to exist.</p>
 	<div class="divTable">
 <div class="divTableBody">
-<div class="divTableRow">
-<div class="divTableCell"><p><img width="300" src="grappleshark.github.io/lecture.jpg"></p></div>
-</div>
-<div class="divTableRow">
+<div class="divTableRow" style="float:right; width: 100px;">
 <div class="divTableCell"><p class="lead">Currently reading</p><a href="https://www.amazon.co.uk/d/Books/Phoenix-Project-DevOps-Helping-Business/0988262509/ref=sr_1_1?ie=UTF8&qid=1491417161&sr=8-1&keywords=phoenix+project"><img src="grappleshark.github.io/book.jpg"></a></div>
 </div>
 <div class="divTableRow">
