--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 	   <div class="divTable">
 			<div class="divTableBody">
 				<div class="divTableRow">
-				<div class="divTableCell"><a href="https://github.com/grappleshark" target="_blank"><img width="20" src="grappleshark.github.io/git.png"></a></div>
-				<div class="divTableCell"><a href="https://www.linkedin.com/in/lichtensteiger/" target="_blank"><img width="20" src="grappleshark.github.io/in.png"></a></div>
-				<div class="divTableCell"><a href="https://twitter.com/grappleshark" target="_blank"><img width="20" src="grappleshark.github.io/tweet.png"></a></div>
-				<div class="divTableCell"><a href="https://www.instagram.com/grappleshark" target="_blank"><img width="20" src="grappleshark.github.io/insta.png"></a></div>
+				<div class="divTableCell"><a href="https://github.com/grappleshark" target="_blank"><img width="100" src="grappleshark.github.io/git.png"></a></div>
+				<div class="divTableCell"><a href="https://www.linkedin.com/in/lichtensteiger/" target="_blank"><img width="100" src="grappleshark.github.io/in.png"></a></div>
+				<div class="divTableCell"><a href="https://twitter.com/grappleshark" target="_blank"><img width="100" src="grappleshark.github.io/tweet.png"></a></div>
+				<div class="divTableCell"><a href="https://www.instagram.com/grappleshark" target="_blank"><img width="100" src="grappleshark.github.io/insta.png"></a></div>
 				</div>
 			</div>
 		</div>
@@ -55,7 +55,9 @@
 	<div class="divTable">
 <div class="divTableBody">
 <div class="divTableRow" style="float:right; width: 100px;">
-<div class="divTableCell"><p class="lead">Currently reading</p><a href="https://www.amazon.co.uk/d/Books/Phoenix-Project-DevOps-Helping-Business/0988262509/ref=sr_1_1?ie=UTF8&qid=1491417161&sr=8-1&keywords=phoenix+project"><img src="grappleshark.github.io/book.jpg"></a></div>
+<div class="divTableCell"><p class="lead">Reading</p><a href="https://www.amazon.co.uk/d/Books/Phoenix-Project-DevOps-Helping-Business/0988262509/ref=sr_1_1?ie=UTF8&qid=1491417161&sr=8-1&keywords=phoenix+project"><img src="grappleshark.github.io/book.jpg"></a></div>#
+<div class="divTableCell"><p class="lead">Building</p><img width="100" src="grappleshark.github.io/yccc.jpg"></a><br>Working on a scheduling / data collection portal for Yorkshire County Cricket Club</a></div>
+<div class="divTableCell"><p class="lead">Learning</p><a href="https://www.python.org/" target="_blank"><img src="grappleshark.github.io/python.png"></a></div>
 </div>
 <div class="divTableRow">
 <div class="divTableCell"><a class="twitter-timeline" data-width="300" href="https://twitter.com/grappleshark">Tweets by GrappleShark</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></div>
