--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<div class="divTable">
 		<div class="divTableBody">
 		<div class="divTableRow" style="float:right; width: 100px;">
-		<div class="divTableCell"><p class="lead">Reading</p><a href="https://www.amazon.co.uk/d/Books/Phoenix-Project-DevOps-Helping-Business/0988262509/ref=sr_1_1?ie=UTF8&qid=1491417161&sr=8-1&keywords=phoenix+project"><img src="grappleshark.github.io/book.jpg"></a></div>#
+		<div class="divTableCell"><p class="lead">Reading</p><a href="https://www.amazon.co.uk/d/Books/Phoenix-Project-DevOps-Helping-Business/0988262509/ref=sr_1_1?ie=UTF8&qid=1491417161&sr=8-1&keywords=phoenix+project"><img src="grappleshark.github.io/book.jpg"></a></div>
 		<div class="divTableCell"><p class="lead">Building</p><img src="grappleshark.github.io/yccc.jpg"></a><br>Working on a scheduling / data collection portal for Yorkshire County Cricket Club</a></div>
 		<div class="divTableCell"><p class="lead">Learning</p><a href="https://www.python.org/" target="_blank"><img src="grappleshark.github.io/python.png"></a></div>
 		</div>
