--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
  <br><br>
 	<p><img width="300" src="grappleshark.github.io/lecture.jpg"></p>
 	   <p class="lead">Press any key to exist.</p>
+	   <br>
 	   <div class="divTable">
 			<div class="divTableBody">
 				<div class="divTableRow">
@@ -49,16 +50,21 @@
 					<div class="divTableCell"><a href="https://twitter.com/grappleshark" target="_blank"><img width="75" src="grappleshark.github.io/tweet.png"></a></div>
 					<div class="divTableCell"><a href="https://www.instagram.com/grappleshark" target="_blank"><img width="75" src="grappleshark.github.io/insta.png"></a></div>
 				</div>
-				<div class="divTableRow">
+				
+			</div>
+		</div>
+		<br>
+		<hr>
+			<div class="divTable">
+		<div class="divTableRow">
 					<div class="divTableCell"><p class="lead">Reading</p><a href="https://www.amazon.co.uk/d/Books/Phoenix-Project-DevOps-Helping-Business/0988262509/ref=sr_1_1?ie=UTF8&qid=1491417161&sr=8-1&keywords=phoenix+project"><img src="grappleshark.github.io/book.jpg"></a></div>
 					<div class="divTableCell"><p class="lead">Building</p><img src="grappleshark.github.io/yccc.jpg"></a><br>Working on a scheduling / data collection portal for Yorkshire County Cricket Club</a></div>
 					<div class="divTableCell"><p class="lead">Learning</p><a href="https://www.python.org/" target="_blank"><img src="grappleshark.github.io/python.png"></a></div>
 					<div class="divTableCell"><p class="lead">Something</p><a href="https://www.python.org/" target="_blank"><img src="grappleshark.github.io/python.png"></a></div>
 		</div>
-			</div>
-			
-		</div>
-	
+	</div>
+	<br>
+	<hr>
 	<div class="divTable">
 	<div class="divTableRow">
 		<div class="divTableCell"><a class="twitter-timeline" data-width="300" href="https://twitter.com/grappleshark">Tweets by GrappleShark</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></div>
