--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GrappleShark at GitHub</title>
+    <title>Tanja Lichtensteiger</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 		
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand">GrappleShark Does Git</a>
+     <a class="navbar-brand">Tanja Lichtensteiger</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
