--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 	<p><img width="300" src="grappleshark.github.io/lecture.jpg"></p>
 	   <p class="lead">Press any key to exist.</p>
 	   <br>
+	   <img width="20" src="grappleshark.github.io/work.png"> Software Development Team Leader @leedsbeckett 
+	   <br>
+	   <img width="20" src="grappleshark.github.io/speech.png"> Speaker & Advocate for #WomenInTech & #TechDiversity 
+	   <br>
+	   <img width="20" src="grappleshark.github.io/pin.png"> Leeds, Yorkshire, UK
+	   <br>
 	   <div class="divTable">
 			<div class="divTableBody">
 				<div class="divTableRow">
