--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
  <br><br>
 	<p><img width="300" src="grappleshark.github.io/lecture.jpg"></p>
 	   <p class="lead">Press any key to exist.</p>
-	   <img width="20" src="grappleshark.github.io/work.png"> Software Development Team Leader @leedsbeckett 
+	   <img width="20" src="grappleshark.github.io/work.png"> Software Dev Team Leader <a href="http://www.leedsbeckett.ac.uk/" target="_blank">@leedsbeckett</a> 
 	   <br>
-	   <img width="20" src="grappleshark.github.io/speech.png"> Speaker & Advocate for #WomenInTech & #TechDiversity 
+	   <img width="20" src="grappleshark.github.io/speech.png"> Speaker for <a href="https://technorthhq.com/programmes/northern-voices/northern-voices-tanja-lichtensteiger/" target="_blank">#Tech & #TechDiversity</a> 
 	   <br>
 	   <img width="20" src="grappleshark.github.io/pin.png"> Leeds, Yorkshire, UK
 	   <br>
