--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GrappleShark at GitHub</title>
+    <title>Tanja Lichtensteiger</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 		
