--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
 	   <br>
 	   <img width="20" src="grappleshark.github.io/pin.png"> Leeds, Yorkshire, UK
 	   <br>
+	   <a href="https://github.com/grappleshark" target="_blank"><img width="25" src="grappleshark.github.io/git.png"></a>&nbsp;
+		<a href="https://www.linkedin.com/in/lichtensteiger/" target="_blank"><img width="25" src="grappleshark.github.io/in.png"></a>&nbsp;
+		<a href="https://twitter.com/grappleshark" target="_blank"><img width="25" src="grappleshark.github.io/tweet.png"></a>&nbsp;
+		<a href="https://www.instagram.com/grappleshark" target="_blank"><img width="25" src="grappleshark.github.io/insta.png"></a>
 	   <hr>
 	   <br>
-	   <div class="divTable">
+	   <!--<div class="divTable">
 			<div class="divTableBody">
 				<div class="divTableRow">
 					<div class="divTableCell"><a href="https://github.com/grappleshark" target="_blank"><img width="50" src="grappleshark.github.io/git.png"></a></div>
@@ -61,7 +65,7 @@
 			</div>
 		</div>
 		<br>
-		<hr>
+		<hr>-->
 			<div class="divTable">
 		<div class="divTableRow">
 					<div class="divTableCell"><p class="lead">Reading</p><a href="https://www.amazon.co.uk/d/Books/Phoenix-Project-DevOps-Helping-Business/0988262509/ref=sr_1_1?ie=UTF8&qid=1491417161&sr=8-1&keywords=phoenix+project" target="_blank"><img width="75" src="grappleshark.github.io/book.jpg"></a></div>
