--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="divTableRow">
 					<div class="divTableCell"><p class="lead">Reading</p><a href="https://www.amazon.co.uk/d/Books/Phoenix-Project-DevOps-Helping-Business/0988262509/ref=sr_1_1?ie=UTF8&qid=1491417161&sr=8-1&keywords=phoenix+project" target="_blank"><img width="75" src="grappleshark.github.io/book.jpg"></a></div>
 					<div class="divTableCell"><p class="lead">Building</p><img width="75" src="grappleshark.github.io/yccc.jpg"></a><br>Scheduling / Data Collection Portal</a></div>
-					<div class="divTableCell"><p class="lead">Learning</p><a href="https://www.python.org/" target="_blank"><img width="75" src="grappleshark.github.io/python.png"></a></div>
+					<div class="divTableCell"><p class="lead">Learning</p><a href="https://www.ruby-lang.org/en/" target="_blank"><img width="75" src="grappleshark.github.io/ruby.png"></a></div>
 		</div>
 	</div>
 	<br>
